session-2-kubernetes-orchestration/modul-3-troubleshooting-ingress/ingress.vorlage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: __TODO_SERVICE_NAME__ # z. B. api
                port:
                  number: __TODO_SERVICE_PORT__ # z. B. 80
          - path: /health(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: __TODO_SERVICE_NAME__
                port:
                  number: __TODO_SERVICE_PORT__
